# fai-geometry-explorer

./: .gitignore  LICENSE  README.md  fai_gui_launcher.py  pyproject.toml
.github/workflows/: build-windows.yml
src/fai_explorer/: __init__.py  cli.py  coordinates.py  dual_station.py  geomagnetic.py  geometry.py  gui.py  map_export.py  png_export.py  single_map_export.py  single_station.py
src/fai_explorer/data/: README.md  country_boundaries.json
tools/: build_country_boundaries.py  build_windows.ps1  plot_cw_spectra.py
